# python-maker-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FEATURES.md  README.md  Rust Project.docx  explications.txt  pymakebot.toml
project_code/: Cargo.toml  memory.json
project_code/src/: api.rs  config.rs  interface.rs  logger.rs  main.rs  python_exec.rs  utils.rs
src/: api.rs  config.rs  interface.rs  lib.rs  logger.rs  main.rs  python_exec.rs  utils.rs
src/dashboard/: mod.rs  routes.rs  server.rs  state.rs  templates.rs  websocket.rs
templates/: index.html
templates/partials/: code_viewer.html  containers.html  history.html  stats.html
tests/: integration_tests.rs
