[package]
name = "python-maker-bot"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
dotenvy = "0.15"
chrono = "0.4"
rand = "0.8"
regex = "1.10"
colored = "2.1"
toml = "0.8"
dirs = "5.0"
wait-timeout = "0.2"
rustyline = { version = "15", features = ["derive"] }

# Web dashboard
axum = { version = "0.7", features = ["ws"] }
askama = "0.12"
askama_axum = "0.4"
futures = "0.3"

[dev-dependencies]
mockito = "1.5"
