[package]
name = "project_code"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
dotenvy = "0.15"
chrono = "0.4"
rand = "0.8"
